; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_ftosizs.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_ftosizs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"ftosizs s%d,s%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_ftosizs(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @assem_debug(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = and i32 %8, 14
  %10 = shl i32 %9, 11
  %11 = or i32 -289600832, %10
  %12 = load i32, i32* %4, align 4
  %13 = and i32 %12, 1
  %14 = shl i32 %13, 22
  %15 = or i32 %11, %14
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, 14
  %18 = ashr i32 %17, 1
  %19 = or i32 %15, %18
  %20 = load i32, i32* %3, align 4
  %21 = and i32 %20, 1
  %22 = shl i32 %21, 5
  %23 = or i32 %19, %22
  %24 = call i32 @output_w32(i32 %23)
  ret void
}

declare dso_local i32 @assem_debug(i8*, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
